# TRP1-Challenge-Week-2

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  README.md  app.py  main.py  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/scripts/powershell/: create-new-feature.ps1
.specify/templates/: spec-template.md
audit/report_bypeer_received/: audit_report.json  audit_report.md
audit/report_onpeer_generated/: audit_report.json  audit_report.md
audit/report_onself_generated/: audit_report.json  audit_report.md
docs/: DEMO_SCRIPT_Five_Meeting.md  FDE_Challenge_Week2_Design_Report.md  FDE_Week2_Final_Report.md  architecture.md
rubric/: week2_rubric.json
specs/1-automaton-auditor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-automaton-auditor/checklists/: requirements.md
specs/1-automaton-auditor/contracts/: cli-interface.md
src/: config.py  graph.py  paths.py  state.py
src/nodes/: detectives.py  judges.py  justice.py
src/tools/: ast_parser.py  git_tools.py  pdf_parser.py
src/utils/: ast_cache.py  context_builder.py  logger.py  rate_limiter.py  report_parser.py  report_serializer.py
tests/: conftest.py
tests/integration/: __init__.py  test_end_to_end.py  test_graph_orchestration.py
tests/unit/: __init__.py  test_nodes.py  test_state.py  test_tools.py
